--- a/app/templates/app_card_detail.html
+++ b/app/templates/app_card_detail.html
@@ -369,11 +369,17 @@ iframe {
 
 <style>
 
+  .card-text {
+    text-indent: 1em;
+  }
+
   .card-text.main {
   display: -webkit-box;
   overflow: hidden;
   -webkit-line-clamp: 10;
   -webkit-box-orient: vertical;
+  width: 90%;
+  margin: 0 auto;
   }
 
   .card.bg-light {
@@ -441,10 +447,10 @@ iframe {
     <div class="card-header main">{{object.date |date:"n" }}月{{object.date |date:"j" }}日({{object.date |date:"D" }})</div>
     <div class="card-body">
       <h5 class="card-title">{{object.dairy_target}}</h5>
-      <p class="card-text main">{{object.dairy_target_summary}}</p>
+      <p class="card-text main text-left">{{object.dairy_target_summary}}</p>
     </div>
     <ul class="list-group list-group-flush">
-      <li class="list-group-item" style="font-size: 20px;">練習メニュー<p class="card-text main" style="font-size: 1rem; margin-top: 5px;">{{object.dairy_target_menu}}</p></li>
+      <li class="list-group-item" style="font-size: 20px;">練習メニュー<p class="card-text main text-left" style="font-size: 1rem; margin-top: 5px;">{{object.dairy_target_menu}}</p></li>
       <li class="list-group-item">運動時間の合計:&nbsp;{{object.training_time}}&nbsp;時間</li>
       <li class="list-group-item">体幹トレーニング:&nbsp;{{object.stability_time}}&nbsp;分</li>
       <li class="list-group-item">ストレッチ:&nbsp;{{object.stretch_time}}&nbsp;分</li>
