--- a/app/templates/app_target_update.html
+++ b/app/templates/app_target_update.html
@@ -8,8 +8,8 @@
         padding-top: 70px;
       }
 
-      textarea {
-        height: 10vh !important;
+      .link textarea {
+        height: 12vh !important;
       }
 
       .update {
@@ -50,11 +50,11 @@
             大会の日程などを書きましょう
           </small>
         </div>
-        <div class="form-group">
+        <div class="form-group link">
           <label for="id_long_target">長期目標のための参考動画</label>
           {{ form.long_target_link }}
           <small class="text-muted mb-5 form-text">
-            こうなりたいと思うプレーの動画を見つけてきましょう
+            こうなりたいと思うプレーの動画を見つけてきましょう。動画下の共有ボタンをクリックして、埋め込みリンクをコピーしてきてください。
           </small>
         </div>
         <div class="form-group" style="margin-bottom: 130px; width: 10vh;">
@@ -78,11 +78,11 @@
             具体的に書きましょう
           </small>
         </div>
-        <div class="form-group" style="margin-bottom: 130px;">
+        <div class="form-group link" style="margin-bottom: 130px;">
           <label for="id_long_target">中期目標のための参考動画</label>
           {{ form.middle_target_link }}
           <small class="text-muted mb-5 form-text">
-            こうなりたいと思うプレーの動画を見つけてきましょう
+            こうなりたいと思うプレーの動画を見つけてきましょう。動画下の共有ボタンをクリックして、埋め込みリンクをコピーしてきてください。
           </small>
         </div>
         <div class="form-group">
@@ -99,11 +99,11 @@
             具体的に書きましょう
           </small>
         </div>
-        <div class="form-group">
+        <div class="form-group link">
           <label for="id_long_target">短期目標のための参考動画</label>
           {{ form.short_target_link }}
           <small class="text-muted mb-5 form-text">
-            こうなりたいと思うプレーの動画を見つけてきましょう
+            こうなりたいと思うプレーの動画を見つけてきましょう。動画下の共有ボタンをクリックして、埋め込みリンクをコピーしてきてください。
           </small>
         </div>
         <div class="update">
