fix_staff_color

--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -980,7 +980,7 @@
 {% for item in staff %}
 <div class="card text-center mt-5">
   <a href="{% url 's_update' item.pk %}" class="link"></a>
-  <div class="card-header">
+  <div class="card-header" style="background-color: #21ff0024;">
     スタッフから
   </div>
   <div class="card-body">
