--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -4,6 +4,10 @@
 
 <style>
 
+  .card {
+    border: 1px solid rgb(0 0 0 / 40%);
+  }
+
   .card-text {
     text-indent: 1em;
   }
@@ -128,7 +132,10 @@
 
   .card-header.target {
     font-size: 30px;
-    background-color: #fbd7d7ab;
+    /* background-color: #fbd7d7ab; */
+
+    /* gif用 */
+    background-color: #ef6d6d6e;
     white-space: nowrap;
   }
 
@@ -137,7 +144,9 @@
   }
 
   .card-footer {
-    background-color: #fbd7d7ab;
+    /* background-color: #fbd7d7ab; */
+    /* gif用 */
+    background-color: #ef6d6d6e;
   }
 
   iframe {
@@ -476,7 +485,10 @@
 <style>
 
   .card-header.week {
-    background-color: #f2c4ff94;
+    /* background-color: #f2c4ff94; */
+
+    /* gif用 */
+    background-color: #ce4ef26e;
   }
 
   .card-text {
@@ -993,7 +1005,9 @@
 {% for item in staff %}
 <div class="card text-center mt-5">
   <a href="{% url 's_update' item.pk %}" class="link"></a>
-  <div class="card-header" style="background-color: #21ff0024;">
+  <!-- <div class="card-header" style="background-color: #21ff0024; "> -->
+  <!-- gif用 -->
+  <div class="card-header" style="background-color: #21ff0063; ">
     スタッフから
   </div>
   <div class="card-body">
