--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -3,10 +3,10 @@
 {% block header %}
 
 <style>
-
-  .card {
+  /* gif用 */
+  /* .card {
     border: 1px solid rgb(0 0 0 / 40%);
-  }
+  } */
 
   .card-text {
     text-indent: 1em;
@@ -132,10 +132,10 @@
 
   .card-header.target {
     font-size: 30px;
-    /* background-color: #fbd7d7ab; */
+    background-color: #fbd7d7ab;
 
     /* gif用 */
-    background-color: #ef6d6d6e;
+    /* background-color: #ef6d6d6e; */
     white-space: nowrap;
   }
 
@@ -144,9 +144,10 @@
   }
 
   .card-footer {
-    /* background-color: #fbd7d7ab; */
+    background-color: #fbd7d7ab;
+
     /* gif用 */
-    background-color: #ef6d6d6e;
+    /* background-color: #ef6d6d6e; */
   }
 
   iframe {
@@ -485,10 +486,10 @@
 <style>
 
   .card-header.week {
-    /* background-color: #f2c4ff94; */
+    background-color: #f2c4ff94;
 
     /* gif用 */
-    background-color: #ce4ef26e;
+    /* background-color: #ce4ef26e; */
   }
 
   .card-text {
@@ -1005,9 +1006,9 @@
 {% for item in staff %}
 <div class="card text-center mt-5">
   <a href="{% url 's_update' item.pk %}" class="link"></a>
-  <!-- <div class="card-header" style="background-color: #21ff0024; "> -->
+  <div class="card-header" style="background-color: #21ff0024; ">
   <!-- gif用 -->
-  <div class="card-header" style="background-color: #21ff0063; ">
+  <!-- <div class="card-header" style="background-color: #21ff0063; "> -->
     スタッフから
   </div>
   <div class="card-body">
