--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,12 +2,13 @@
 <!doctype html>
 <html lang="en">
   <head>
+    {% load static %} 
+    <link href="{% static 'images/macho_fabicon.svg' %}" rel="shortcut icon">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Kazuya-Portfolio</title>
     <meta name="description" content="ポートフォリオサイトを作製してみました。">
-    <link rel="shortcut icon" href="https://www.joc.or.jp/" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&family=Kiwi+Maru&display=swap" rel="stylesheet">
